SVY-19946 Update to Rhino 1.8.0 -changes to fix the rhino build with maven (moved debuggersrc to the rhino subproject) - use java 21
- fixed indentation/formatting and problems reported by spotless checks:
  use UTF_8, ISO_8859_1 from StandardCharsets
  add missing @Override annotations
  add types for Map/Set/ArrayDeque
  use valueOf for Integer, Long, Boolean, BigInt
  use StringBuilder instead of StringBuffer, ArrayDeque instead of Stack
  unused var in ContextNamesCommand
  do not use exception.printStackTrace()
  method.isAccessible() was deprecated
  simplify if (id.equals("length")) (NativeJavaArray)
  @SuppressWarnings("AnnotateFormatMethod") for logDebug && logError
  Thread.sleep instead of Thread.yield()